--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "electron-leveldown-pouchdb-webpack",
   "main": "src/ElectronApp.js",
   "scripts": {
-    "start": "webpack && electron src/ElectronApp.js",
-    "postinstall": "electron-rebuild -o leveldown"
+    "start": "webpack && electron src/ElectronApp.js"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "electron-rebuild": "^1.6.0",
-    "electron": "^1.7.9",
-    "pouchdb": "^6.3.4",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "webpack": "^3.6.0"
+    "electron": "^9.0.4",
+    "pouchdb": "^7.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
