--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "start": "webpack && electron src/ElectronApp.js"
   },
   "dependencies": {
-    "electron": "^17.2.0",
-    "pouchdb": "^7.2.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "electron": "^21.2.1",
+    "pouchdb": "^7.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^8.2.4",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "7.19.4",
+    "@babel/preset-react": "7.18.6",
+    "babel-loader": "9.0.1",
+    "webpack": "5.74.0",
+    "webpack-cli": "4.10.0"
   }
 }
