--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "start": "webpack && electron src/ElectronApp.js"
   },
   "dependencies": {
-    "electron": "^21.2.1",
-    "pouchdb": "^7.3.0",
+    "electron": "^21.3.0",
+    "pouchdb": "^7.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/preset-env": "7.19.4",
-    "@babel/preset-react": "7.18.6",
-    "babel-loader": "9.0.1",
-    "webpack": "5.74.0",
-    "webpack-cli": "4.10.0"
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0"
   }
 }
