--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "start": "webpack && electron src/ElectronApp.js"
   },
   "dependencies": {
-    "electron": "^22.0.0",
-    "pouchdb": "^7.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "electron": "22.0.2",
+    "pouchdb": "8.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
+    "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^9.1.0",
+    "babel-loader": "^9.1.2",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
+    "webpack-cli": "^5.0.1"
   }
 }
